# BetterChatGPT

./: .dockerignore  .env  .env.example  .gitignore  .prettierrc  .replit  CNAME.txt  Dockerfile  LICENSE  Makefile  README-zh_CN.md  README.md  ampli.json  docker-compose.yml  dockerfileNpm  index.html  package-lock.json  package.json  pnpm-lock.yaml  replit.nix  server.js  staticwebapp.config.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  check_on_pr  dependabot.yml
assets/: index-01d3d7f4.js  index-0461abed.css  index-07441512.js  index-077a70e1.css  index-090b073a.js  index-095828cc.js  index-09b43a4d.css  index-0eab4402.js  index-0ec303bd.js  index-10f2c821.js  index-1214d364.css  index-125d2eec.js  index-12be358b.css  index-140bb0aa.js  index-158c8a0c.js  index-16fc4477.css  index-18574929.css  index-1968735b.js  index-1a3a9886.js  index-1e96e308.js  index-2304aa65.js  index-275b6079.css  index-2da515b5.js  index-2f95adfd.css  index-3471ac3a.js  index-365c4d50.css  index-367d8e7e.css  index-3f4983d8.css  index-43faadf5.css  index-4424e029.js  index-4b2474f7.css  index-50b6c66c.js  index-53195c0a.js  index-5481a770.js  index-54ce030c.js  index-55e4b95e.css  index-581edbfc.js  index-58a89651.js  index-58e25c42.js  index-5961b6be.js  (+90 more)
deploy/: deploy.yaml  route.yaml  staging-deploy.yaml  staging-route.yaml
docs/: README.md  SECURITY.md
documentation/: Solution Architecture.pptx
electron/: index.cjs  preload.js
nginx.d/: default.conf
public/: CNAME  sw.js  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+459 files in other folders)
